@@ -1,6 +1,5 @@
 package io.github.paxel.dedup.comparison;
 
-import lombok.NonNull;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -11,8 +10,8 @@ public class StagedComparison {
 
     private final List<Stage> stages;
 
-    public @NonNull StagedComparison(@NonNull List<Stage> stages) {
-        this.stages = Collections.unmodifiableList(new ArrayList<>(stages));
+    public StagedComparison(List<Stage> stages) {
+        this.stages = List.copyOf(stages);
     }
 
     public boolean hasStage(int stage) {
